1. Implemented lazy loading for QueryParameter.